logs/mobility/build.make.073.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:377:24: error: passing ‘volatile PickUpResult’ as ‘this’ argument of ‘PickUpResult& PickUpResult::operator=(const PickUpResult&)’ discards qualifiers [-fpermissive]
                 result = pickUpController.pickUpSelectedTarget(blockBlock);
                        ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
